--- a/cn/index.html
+++ b/cn/index.html
@@ -258,7 +258,8 @@
 							<p>2023.03 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>澳大利亚科廷大学（Curtin） - 设计与建筑环境学院
+							<h4><a href="https://www.curtin.edu.au/" style="color: #313131;text-decoration: underline;"
+									target="_blank">澳大利亚科廷大学（Curtin）</a> - 设计与建筑环境学院
 							</h4>
 							<p>
 								<h5>研究方向：</h5>GIS 空间分析 | 气候变化与农业
@@ -275,7 +276,8 @@
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>西北农林科技大学（NWAFU） - 资源环境学院 - 土地资源与空间信息技术</h4>
+							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">西北农林科技大学（NWAFU）</a> - 资源环境学院 - 土地资源与空间信息技术</h4>
 							<p>
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
@@ -294,7 +296,8 @@
 							<p>2016.09 - 2019.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>南京师范大学（NNU） - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统（GIS）</h4>
+							<h4><a href="https://www.nnu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">南京师范大学（NNU）</a> - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统（GIS）</h4>
 							<p>
 								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
@@ -313,7 +316,8 @@
 							<p>2012.09 - 2016.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>西北农林科技大学（NWAFU） - 资源环境学院 - 地理信息系统（GIS）</h4>
+							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">西北农林科技大学（NWAFU）</a> - 资源环境学院 - 地理信息系统（GIS）</h4>
 							<p>
 								<h5>主修课程：</h5>
 								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
@@ -1002,9 +1006,10 @@
 					<i class="icon-pin"></i>
 				</div>
 				<h5>地 址</h5>
-				<p style="color: #888888">
-					澳大利亚科廷大学<br>
-					设计与建筑环境学院
+				<p>
+					<a href="https://curtin.edu.au" style="color:#888888" target="_blank">澳大利亚科廷大学</a><br>
+					<a href="https://www.curtin.edu.au/about/learning-teaching/humanities/design-built-environment/"
+						style="color:#888888" target="_blank">设计与建筑环境学院</a>
 				</p>
 			</div>
 
@@ -1015,7 +1020,8 @@
 				<h5>邮 件</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
+				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a><br>
+					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
 
@@ -1025,7 +1031,7 @@
 				</div>
 				<h5>电 话</h5>
 				<!-- <p style="color: #888888"> &plus;86 18851138358<br> </p> -->
-				<p style="color: #888888"> &plus;61 0468698085<br> </p>
+				<p style="color: #888888"> &plus;61 04 6869 8085<br>&plus;86 188 5113 8358 </p>
 			</div>
 		</div> <!-- /contact-info -->
 	</section> <!-- /contact -->
@@ -1062,7 +1068,8 @@
 							src="../images/beian.png" style="float:left;" />
 						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
 							61909002000104号</p>
-					</a><span>© Copyright Kai Ren 2018-<span id="currentYear"></span>.</span>
+					</a><span>© Copyright <i class="fa fa-heart" style="color: #e8496a;"></i> Kai Ren 2018-<span
+							id="currentYear"></span>.</span>
 				</div>
 				<!-- <div class="copyright">
 					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
