--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
 							<p>Mar. 2023 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Curtin University, Australia - School of Design and the Built Environment
+							<h4><a href="https://www.curtin.edu.au/" style="color: #313131;text-decoration: underline;"
+									target="_blank">Curtin University</a>, Australia - School of Design and the Built
+								Environment
 							</h4>
 							<p>
 								<h5>Research interests:</h5>GIS Spatial Analysis | Climate Change and Agriculture
@@ -273,7 +275,12 @@
 							<p>Sep. 2020 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Northwest A&F University (NWAFU) - College of Natural Resources and Environment - Land
+							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">Northwest
+									A&F University
+									(NWAFU)</a> - College of
+								Natural
+								Resources and Environment - Land
 								Resources
 								and
 								Spatial Information Technology
@@ -299,7 +306,9 @@
 							<p>Sep. 2016 - Jun. 2019</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Nanjing Normal University (NNU) - College of Geographic Sciences - Key Laboratory of
+							<h4><a href="https://www.nnu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">Nanjing Normal University (NNU)</a> - College of Geographic Sciences
+								- Key Laboratory of
 								Virtual
 								Geographic Environment Ministry of Education (VGE) - Cartography and Geographic
 								Information System (GIS)
@@ -325,7 +334,9 @@
 							<p>Sep. 2012 - Jun. 2016</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Northwest A&F University (NWAFU) - College of Natural Resources and Environment -
+							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
+									target="_blank">Northwest A&F University (NWAFU)</a> - College of Natural Resources
+								and Environment -
 								Geographic
 								Information
 								System (GIS) </h4>
@@ -1124,9 +1135,11 @@
 					<i class="icon-pin"></i>
 				</div>
 				<h5>Where to find me</h5>
-				<p style="color: #888888">
-					Curtin University<br>
-					School of Design and the Built Environment
+				<p>
+					<a href="https://curtin.edu.au" style="color:#888888" target="_blank">Curtin University</a><br>
+					<a href="https://www.curtin.edu.au/about/learning-teaching/humanities/design-built-environment/"
+						style="color:#888888" target="_blank">School of Design and the Built
+						Environment</a>
 				</p>
 				<!-- <p style="color: #888888">
 					Northwest A&F University<br>
@@ -1141,7 +1154,8 @@
 				<h5>Email Me At</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
+				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a><br>
+					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
 
@@ -1151,7 +1165,7 @@
 				</div>
 				<h5>Call Me At</h5>
 				<!-- <p style="color: #888888"> &plus;86 18851138358<br></p> -->
-				<p style="color: #888888"> &plus;61 0468698085<br> </p>
+				<p style="color: #888888"> &plus;61 04 6869 8085<br>&plus;86 188 5113 8358 </p>
 			</div>
 
 		</div> <!-- /contact-info -->
@@ -1193,7 +1207,8 @@
 							src="images/beian.png" style="float:left;" />
 						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
 							61909002000104号</p>
-					</a><span>© Copyright Kai Ren 2018-<span id="currentYear"></span>.</span>
+					</a><span>© Copyright <i class="fa fa-heart" style="color: #e8496a;"></i> Kai Ren 2018-<span
+							id="currentYear"></span>.</span>
 				</div>
 				<!-- <div class="copyright">
 					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
