--- a/cn/index.html
+++ b/cn/index.html
@@ -258,7 +258,8 @@
 							<p>2023.03 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4><a href="https://www.curtin.edu.au/" style="color: #313131;text-decoration: underline;"
+							<h4><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+									style="color: #313131;text-decoration: underline;"
 									target="_blank">澳大利亚科廷大学（Curtin）</a> - 设计与建筑环境学院
 							</h4>
 							<p>
