--- a/index.html
+++ b/index.html
@@ -256,12 +256,13 @@
 							<p>Mar. 2023 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4><a href="https://www.curtin.edu.au/" style="color: #313131;text-decoration: underline;"
-									target="_blank">Curtin University</a>, Australia - School of Design and the Built
+							<h4><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+									style="color: #313131;text-decoration: underline;" target="_blank">Curtin
+									University</a>, Australia - School of Design and the Built
 								Environment
 							</h4>
 							<p>
-								<h5>Research interests:</h5>GIS Spatial Analysis | Climate Change and Agriculture
+								<h5>Research interests:</h5>GeoSpatial Analysis | Climate Change and Agriculture
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
