add research direction

--- a/cn/index.html
+++ b/cn/index.html
@@ -158,7 +158,8 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span style="line-height: 2em;">气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 | 前后端系统开发</span>
+						<span style="line-height: 2em;">地理空间分析 | 气候变化与农业 | 气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 |
+							前后端系统开发</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
