--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span style="line-height: 1.5em;">Spatial Interpolation Prediction of Meteorological Elements |
+						<span style="line-height: 1.5em;">GeoSpatial Analysis | Climate Change and Agriculture | Spatial
+							Interpolation Prediction of Meteorological Elements |
 							GIS Modeling and Simulation
 							| Lake Hydrodynamic Numerical Model Simulation | Front-end and Back-end System Development
 						</span>
