--- a/cn/index.html
+++ b/cn/index.html
@@ -575,6 +575,7 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li>参加 2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议，并在 “空间分析方法” 分会议上做报告（2023）</li>
 				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一（2023）</li>
 				<li><a href="../images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank">参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</a></li>
