--- a/index.html
+++ b/index.html
@@ -651,6 +651,8 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;Presentation at the International Conference, City+2023@Perth, at
+					Session 5 with the theme of Spatial methods.</li>
 				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;One of the organizers of an International Academic Conference,
 					City+2023@Perth,
 					Australia, with
