--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    ================================================== -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
-
+	<script src="https://kit.fontawesome.com/94a7dae2f4.js" crossorigin="anonymous"></script>
 	<!-- favicons
 	================================================== -->
 	<link rel="icon" type="image" href="images/favicon.ico">
@@ -105,7 +105,7 @@
 			<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i class="fa fa-github"></i></a>
 			</li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
-						class="fa fa-twitter"></i></a></li>
+						class="fa-brands fa-x-twitter fa-sm"></i></a></li>
 			<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
 						class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
@@ -1191,7 +1191,7 @@
 					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
-								class="fa fa-twitter"></i></a></li>
+								class="fa-brands fa-x-twitter"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
 								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
