--- a/cn/index.html
+++ b/cn/index.html
@@ -576,11 +576,11 @@
 			<h3>学习活动：</h3>
 			<ul class="disc">
 				<li>参加 2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议，并在 “空间分析方法” 分会议上做报告（2023）</li>
-				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一（2023）</li>
+				<li>组织国际学术会议：城市研究国际青年学者会议 City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</li>
 				<li><a href="../images/2022_Provincial_Bronze_Award.jpg"
-						target="_blank">参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</a></li>
+						target="_blank">参加第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</a></li>
 				<li><a href="../images/2022_School_Silver_Award.jpg"
-						target="_blank">参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</a></li>
+						target="_blank">参加西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</a></li>
 				<li>2021 年获专业一等奖学金</li>
 				<li>2016、2017 连续两年获专业一等奖学金</li>
 				<li><a href="../images/2019_Excellent_graduate_student_of_NNU.jpg" target="_blank">硕士毕业获南京师范大学 2019
@@ -1052,7 +1052,7 @@
 					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
-								class="fa-brands fa-x-twitte"></i></a></li>
+								class="fa-brands fa-x-twitter"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
 								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
