--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 			<ul class="disc">
 				<li>CET-6</li>
 				<li>Level 3 Network Technology Certificate </li>
-				<li>Putonghua First-Class Certificate</li>
+				<li>Mandarin First-Class Certificate</li>
 			</ul>
 
 			<h3>Activities & Honors: </h3>
