--- a/cn/index.html
+++ b/cn/index.html
@@ -1052,7 +1052,7 @@
 					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
-								class="fa-brands fa-x-twitte"></i></a></li>
+								class="fa-brands fa-x-twitter"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
 								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
