--- a/index.html
+++ b/index.html
@@ -651,67 +651,84 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
-				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;Presentation at the International Conference, City+2023@Perth, at
-					Session 5 with the theme of Spatial methods.</li>
-				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;One of the organizers of an International Academic Conference,
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">Presentation at the International
+						Conference</span>, City+2023@Perth, at
+					Session 5 With the Theme of Spatial methods.</li>
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">One of the Organizers of an
+						International Academic Conference</span>,
 					City+2023@Perth,
-					Australia, with
-					the theme of Geospatial Big Data and Artificial
+					Australia, With
+					the Theme of Geospatial Big Data and Artificial
 					Intelligence for Cities</li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_Provincial_Bronze_Award.jpg"
-						target="_blank">Won the Bronze Award in the 11th "Challenger Cup" Shaanxi
+						target="_blank"><span class="highlight_word">Won the Bronze Award (Provincial Level)</span> in
+						the 11th "Challenger
+						Cup" Shaanxi
 						University Student Entrepreneurship Plan Competition</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_School_Silver_Award.jpg"
 						target="_blank">Participated in the 10th Challenge Cup College Student
 						Entrepreneurship Plan Competition of Northwest A&F
-						University and Won the Silver Award in the Final</a></li>
-				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐Class Scholarship of Northwest A&F University</li>
+						University and <span class="highlight_word">Won the Silver Award</span> in the Final</a></li>
+				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">First‐Class Scholarship</span> of
+					Northwest A&F University</li>
 				<li><b>2019</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2019_Excellent_graduate_student_of_NNU.jpg"
-						target="_blank">Outstanding Graduate of Nanjing Normal University</a></li>
-				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent Postgraduate of Nanjing Normal University (Four
+						target="_blank"><span class="highlight_word">Outstanding Graduate</span> of Nanjing Normal
+						University</a></li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">Excellent Postgraduate</span> of
+					Nanjing Normal University (Four
 					times:&nbsp;<a href="images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
-						School-Level</a> / <a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
+						University-Level</a> / <a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
 						target="_blank" style="text-decoration: underline;">2017
 						College-Level</a> / <a href="images/2018_Excellent_graduate_student_at_school_level.jpg"
-						target="_blank" style="text-decoration: underline;">2018 School-Level</a> / <a
+						target="_blank" style="text-decoration: underline;">2018 University-Level</a> / <a
 						href="images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank"
 						style="text-decoration: underline;">2018
 						College-Level</a>
 					)
 				</li>
-				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent League Member of Nanjing Normal University (Two
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">Excellent League Member</span> of
+					Nanjing Normal University (Two
 					times:&nbsp;<a href="images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
-						School-Level</a> / <a href="images/2018_Excellent_League_member_at_school_level.jpg"
+						University-Level</a> / <a href="images/2018_Excellent_League_member_at_school_level.jpg"
 						target="_blank" style="text-decoration: underline;">2018
-						School-Level</a> )
+						University-Level</a> )
 				</li>
-				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐class scholarship of Nanjing Normal University (Two times)
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">First‐Class scholarship</span> of
+					Nanjing Normal University (Two times)
 				</li>
 				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2016_Class_deputy_league_secretary.jpg"
-						target="_blank">Served as the Deputy League Secretary of the Class</a></li>
+						target="_blank">Served as the <span class="highlight_word">Deputy League Secretary</span> of the
+						Class</a></li>
 				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2016_Excellent_Graduation_Thesis.jpg"
-						target="_blank">Outstanding Undergraduate Thesis of Northwest A&F University</a></li>
-				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2015_Pastoral_envoy.jpg" target="_blank">Organize
-						the pastoral envoy team of Northwest A&F University and
-						won the "Excellent Award" at the university level</a></li>
+						target="_blank"><span class="highlight_word">Outstanding Undergraduate Thesis</span> of
+						Northwest A&F University</a></li>
+				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2015_Pastoral_envoy.jpg" target="_blank"><span
+							class="highlight_word">Organize</span>
+						the Pastoral Envoy Team of Northwest A&F University and
+						<span class="highlight_word">Won the "Excellent Award" at the University Level</span></a></li>
 				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="images/2015_National_science_and_innovation_projects.jpg" target="_blank">The National
-						Science and Technology Innovation Project Numerical
-						Simulation and Mechanism Research of Loess Slope Cultivated Land Microtopography won the
-						Excellence
-						Award</a></li>
+						href="images/2015_National_science_and_innovation_projects.jpg" target="_blank"><span
+							class="highlight_word">Organize the National
+							Science and Technology Innovation Project</span> Numerical
+						Simulation and Mechanism Research of Loess Slope Cultivated Land Microtopography <span
+							class="highlight_word">Won the
+							Excellence
+							Award</span></a></li>
 				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2014_Excellent_League_member_at_school_level.jpg"
-						target="_blank">Excellent League Member of Northwest A&F University </a></li>
+						target="_blank"><span class="highlight_word">Excellent League Member</span> of Northwest A&F
+						University </a></li>
 				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2014_School_level_social_practice_model.jpg"
-						target="_blank">Social
-						Practice Model of Northwest A & F University </a></li>
+						target="_blank"><span class="highlight_word">Social
+							Practice Model</span> of Northwest A & F University </a></li>
 				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="images/2014_Volunteer_Activities_for_the_Country_People.jpg" target="_blank">Organize the
-						activity of Three Visits to the Countryside, Investigation Service in Ansai Comprehensive Test
-						Station of Soil and Water Conservation, and won
-						the Excellent Award at the school level</a></li>
+						href="images/2014_Volunteer_Activities_for_the_Country_People.jpg" target="_blank"><span
+							class="highlight_word">Organize</span> the
+						Activity of Three Visits to the Countryside, Investigation Service in Ansai
+						Comprehensive Test
+						Station of Soil and Water Conservation, and <span class="highlight_word">Won
+							the Excellent Award at the University Level</span></a></li>
 			</ul>
 
 			<h3>Some projects: </h3>
@@ -720,9 +737,10 @@
 						Remediation Expert <i class="fa  fa-trophy" style="color:goldenrod;"></i></a><br /><a
 						href="images/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
-						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
+						[ <span class="highlight_word">Provincial-Level Bronze Award</span>
+						]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="images/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
-						School Silver Award ]</a></li>
+						<span class="highlight_word">University-Level Silver Award</span> ]</a></li>
 				<li><a href="https://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
 						Konjac Industry in
 						Zhenba County Under the Rural Revitalization Strategy
