--- a/cn/index.html
+++ b/cn/index.html
@@ -110,7 +110,7 @@
 			</li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 						class="fa-brands fa-x-twitter fa-sm"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+			<li><a href="https://www.linkedin.com/in/renkaigis/" title="LinkedIn" target="_blank"><i
 						class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
@@ -575,17 +575,20 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
-				<li>参加 2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议，并在 “空间分析方法” 分会议上做报告（2023）</li>
-				<li>组织国际学术会议：城市研究国际青年学者会议 City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</li>
-				<li><a href="../images/2022_Provincial_Bronze_Award.jpg"
-						target="_blank">参加第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</a></li>
-				<li><a href="../images/2022_School_Silver_Award.jpg"
-						target="_blank">参加西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</a></li>
-				<li>2021 年获专业一等奖学金</li>
-				<li>2016、2017 连续两年获专业一等奖学金</li>
+				<li>参加 2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议，并在 “空间分析方法” <span class="highlight_word">分会议上做报告</span>（2023）
+				</li>
+				<li><span class="highlight_word">组织国际学术会议</span>：城市研究国际青年学者会议
+					City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</li>
+				<li><a href="../images/2022_Provincial_Bronze_Award.jpg" target="_blank">参加第十一届“挑战杯”陕西省大学生创业计划竞赛，并获<span
+							class="highlight_word">省级铜奖</span>（2022）</a></li>
+				<li><a href="../images/2022_School_Silver_Award.jpg" target="_blank">参加西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获<span
+							class="highlight_word">决赛银奖</span>（2022）</a></li>
+				<li>2021 年获专业<span class="highlight_word">一等奖学金</span></li>
+				<li>2016、2017 连续两年获专业<span class="highlight_word">一等奖学金</span></li>
 				<li><a href="../images/2019_Excellent_graduate_student_of_NNU.jpg" target="_blank">硕士毕业获南京师范大学 2019
-						届优秀研究生毕业生</a></li>
-				<li>四次获优秀研究生（<a href="../images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
+						届<span class="highlight_word">优秀研究生毕业生</span></a></li>
+				<li>四次获<span class="highlight_word">优秀研究生</span>（<a
+						href="../images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
 						校级</a>；<a href="../images/2017_Excellent_graduate_student_at_college_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
@@ -596,24 +599,29 @@
 						院级</a>
 					）
 				</li>
-				<li>两次获校级优秀团员（<a href="../images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
+				<li>两次获<span class="highlight_word">校级优秀团员</span>（<a
+						href="../images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
 						校级</a>；<a href="../images/2018_Excellent_League_member_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2018
 						校级</a>）
 				</li>
-				<li><a href="../images/2016_Class_deputy_league_secretary.jpg" target="_blank">担任班级副团支书</a></li>
-				<li><a href="../images/2016_Excellent_Graduation_Thesis.jpg"
-						target="_blank">本科毕业论文获西北农林科技大学优秀毕业论文（2016）</a></li>
-				<li><a href="../images/2015_Pastoral_envoy.jpg" target="_blank">组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</a></li>
+				<li><a href="../images/2016_Class_deputy_league_secretary.jpg" target="_blank">担任班级<span
+							class="highlight_word">副团支书</span></a></li>
+				<li><a href="../images/2016_Excellent_Graduation_Thesis.jpg" target="_blank">本科毕业论文获西北农林科技大学<span
+							class="highlight_word">优秀毕业论文</span>（2016）</a></li>
+				<li><a href="../images/2015_Pastoral_envoy.jpg" target="_blank">组织西北农林科技大学田园使者团队，获<span
+							class="highlight_word">校级“优秀奖”</span>（2015）</a></li>
 				<li><a href="../images/2015_National_science_and_innovation_projects.jpg"
-						target="_blank">主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2015）</a></li>
-				<li><a href="../images/2014_Excellent_League_member_at_school_level.jpg"
-						target="_blank">西北农林科技大学优秀团员（2014）</a></li>
-				<li><a href="../images/2014_School_level_social_practice_model.jpg"
-						target="_blank">西北农林科技大学社会实践标兵（2014）</a></li>
+						target="_blank">主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获<span
+							class="highlight_word">校级“优秀奖”</span>（2015）</a></li>
+				<li><a href="../images/2014_Excellent_League_member_at_school_level.jpg" target="_blank">西北农林科技大学<span
+							class="highlight_word">优秀团员</span>（2014）</a></li>
+				<li><a href="../images/2014_School_level_social_practice_model.jpg" target="_blank">西北农林科技大学<span
+							class="highlight_word">社会实践标兵</span>（2014）</a></li>
 				<li><a href="../images/2014_Volunteer_Activities_for_the_Country_People.jpg"
-						target="_blank">组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</a></li>
+						target="_blank">组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获<span class="highlight_word">校级“优秀奖”</span>（2014）</a>
+				</li>
 			</ul>
 
 			<h3>参与的一些小项目: </h3>
@@ -621,10 +629,11 @@
 				<li><a href="https://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家 <i class="fa  fa-trophy"
 							style="color:goldenrod;"></i></a><br /><a href="../images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank" style="text-decoration: underline;">
-						[ 省级铜奖 ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
+						[ <span class="highlight_word">省级铜奖</span>
+						]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="../images/2022_School_Silver_Award.jpg" target="_blank"
 						style="text-decoration: underline;">[
-						校级银奖 ]</a></li>
+						<span class="highlight_word">校级银奖</span> ]</a></li>
 				<li><a href="https://moyu.renkaigis.cn/" target="_blank">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展</a></li>
 				<li><a href="https://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
 				</li>
@@ -1053,7 +1062,7 @@
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 								class="fa-brands fa-x-twitter"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+					<li><a href="https://www.linkedin.com/in/renkaigis/" title="LinkedIn" target="_blank"><i
 								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
 								class="fa fa-book"></i></a></li>
