--- a/cn/index.html
+++ b/cn/index.html
@@ -575,10 +575,12 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
-				<li>参加 2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议，并在 “空间分析方法” <span class="highlight_word">分会议上做报告</span>（2023）
+				<li><a href="../images/2023_City+.png" target="_blank"><span class="highlight_word">参加 2023 年澳大利亚珀斯举办的
+							City+ 城市研究国际青年学者会议</span>，并在 “空间分析方法” <span class="highlight_word">分会议上做报告</span>（2023）</a>
 				</li>
-				<li><span class="highlight_word">组织国际学术会议</span>：城市研究国际青年学者会议
-					City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</li>
+				<li><a href="https://yongzesong.com/cityplus-2023-committee/" target="_blank"><span
+							class="highlight_word">组织国际学术会议</span>：城市研究国际青年学者会议
+						City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</a></li>
 				<li><a href="../images/2022_Provincial_Bronze_Award.jpg" target="_blank">参加第十一届“挑战杯”陕西省大学生创业计划竞赛，并获<span
 							class="highlight_word">省级铜奖</span>（2022）</a></li>
 				<li><a href="../images/2022_School_Silver_Award.jpg" target="_blank">参加西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获<span
