--- a/index.html
+++ b/index.html
@@ -651,15 +651,17 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
-				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">Presentation at the International
-						Conference</span>, City+2023@Perth, at
-					Session 5 With the Theme of Spatial methods.</li>
-				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">One of the Organizers of an
-						International Academic Conference</span>,
-					City+2023@Perth,
-					Australia, With
-					the Theme of Geospatial Big Data and Artificial
-					Intelligence for Cities</li>
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2023_City+.png" target="_blank"><span
+							class="highlight_word">Presentation at the International
+							Conference</span>, City+2023@Perth, at
+						Session 5 With the Theme of Spatial methods.</a></li>
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://yongzesong.com/cityplus-2023-committee/"
+						target="_blank"><span class="highlight_word">One of the Organizers of an
+							International Academic Conference</span>,
+						City+2023@Perth,
+						Australia, With
+						the Theme of Geospatial Big Data and Artificial
+						Intelligence for Cities</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank"><span class="highlight_word">Won the Bronze Award (Provincial Level)</span> in
 						the 11th "Challenger
