--- a/index.html
+++ b/index.html
@@ -790,6 +790,22 @@
 				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
+							<img src="images/portfolio/work07.png" alt="Salad">
+							<a href="#modal-07" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Geospatial ML: Wheat Production Disparities
+										</h3>
+										<span class="folio-types">
+											Wheat Production
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
 							<img src="images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
@@ -886,6 +902,26 @@
 
 					<!-- modal popups - begin
 	            ============================================================= -->
+					<div id="modal-07" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/portfolio/modals/work07.png" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>Geospatial analysis of wheat production
+							</h4>
+							<p>
+
+							</p>
+
+							<div class="categories"></div>
+						</div>
+
+						<!-- <div class="link-box">
+							<a href="javascript:void(0)">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div> -->
+					</div>
 					<div id="modal-06" class="popup-modal slider mfp-hide">
 						<div class="media">
 							<img src="images/portfolio/modals/work06.png" alt="" />
@@ -906,10 +942,10 @@
 							<div class="categories">XinJiang Cotton</div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 					</div> <!-- /modal-06 -->
 					<div id="modal-05" class="popup-modal slider mfp-hide">
 						<div class="media">
@@ -928,10 +964,10 @@
 							<div class="categories">Projects of Kunming Environmental Monitoring Center </div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 					</div>
 
 					<div id="modal-04" class="popup-modal slider mfp-hide">
@@ -950,10 +986,10 @@
 							<div class="categories">Projects of Kunming Environmental Monitoring Center</div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 					</div> <!-- /modal-02 -->
 
 					<div id="modal-03" class="popup-modal slider mfp-hide">
@@ -972,10 +1008,10 @@
 							<div class="categories">Projects of Kunming Environmental Monitoring Center</div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 					</div> <!-- /modal-03 -->
 
 					<div id="modal-02" class="popup-modal slider mfp-hide">
@@ -994,10 +1030,10 @@
 							<div class="categories">Software Copyright </div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 					</div> <!-- /modal-04 -->
 
 					<div id="modal-01" class="popup-modal slider mfp-hide">
@@ -1015,10 +1051,10 @@
 							<div class="categories">Pizhou Water Conservancy Bureau </div>
 						</div>
 
-						<div class="link-box">
+						<!-- <div class="link-box">
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
+						</div> -->
 
 					</div> <!-- /modal-05 -->
 					<!-- modal popups - end
