--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i class="fa fa-home fa-fw"></i></a></li>
 			<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i class="fa fa-github"></i></a>
 			</li>
-			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
+			<li><a href="https://x.com/renkaigis" title="X" target="_blank"><i
 						class="fa-brands fa-x-twitter fa-sm"></i></a></li>
 			<li><a href="https://www.linkedin.com/in/renkaigis/" title="LinkedIn" target="_blank"><i
 						class="fa fa-linkedin"></i></a></li>
@@ -1246,7 +1246,7 @@
 								class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
 								class="fa fa-github"></i></a></li>
-					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
+					<li><a href="https://x.com/renkaigis" title="X" target="_blank"><i
 								class="fa-brands fa-x-twitter"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/renkaigis/" title="LinkedIn" target="_blank"><i
 								class="fa fa-linkedin"></i></a></li>
