--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
-	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
-
 
 	<!-- script
    ================================================== -->
@@ -112,6 +110,12 @@
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
 						class="fa fa-camera"></i></a></li>
+			<li><a href="https://www.researchgate.net/profile/Kai-Ren-16" title="ResearchGate" target="_blank"><i
+						class="fa-brands fa-researchgate fa-sm"></i></a></li>
+			<li><a href="https://scholar.google.ca/citations?hl=en&user=0HgAH2IAAAAJ" title="Google Scholar"
+					target="_blank"><i class="fa-brands fa-google-scholar fa-sm"></i></a></li>
+			<li><a href="https://orcid.org/0009-0007-1079-902X" title="ORCID" target="_blank"><i
+						class="fa-brands fa-orcid fa-sm"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -1255,6 +1259,12 @@
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 					<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
 								class="fa fa-camera"></i></a></li>
+					<li><a href="https://www.researchgate.net/profile/Kai-Ren-16" title="ResearchGate"
+							target="_blank"><i class="fa-brands fa-researchgate fa-sm"></i></a></li>
+					<li><a href="https://scholar.google.ca/citations?hl=en&user=0HgAH2IAAAAJ" title="Google Scholar"
+							target="_blank"><i class="fa-brands fa-google-scholar fa-sm"></i></a></li>
+					<li><a href="https://orcid.org/0009-0007-1079-902X" title="ORCID" target="_blank"><i
+								class="fa-brands fa-orcid fa-sm"></i></a></li>
 				</ul>
 
 			</div>
